Increased code coverage for collection package